k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boiler-plate-express-rest
  namespace: boiler-plate
  labels:
    app: boiler-plate-express-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boiler-plate-express-rest
  template:
    metadata:
      labels:
        app: boiler-plate-express-rest
    spec:
      containers:
        - name: boiler-plate-express-rest
          image: nexus.arffy.com/projects/boiler_plate_express_rest:209208f7
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: uploads-storage
              mountPath: /home/arffy/boiler_plate_express_rest/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: boiler-plate-uploads-storage-pvc
      imagePullSecrets:
        - name: docker-auth
