k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boiler-plate-express-rest-service
  namespace: boiler-plate
spec:
  selector:
    app: boiler-plate-express-rest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
